configure_file(utilities/version.cpp.in utilities/version.cpp @ONLY)
add_library(MonteCarlo-BSE_version STATIC ${CMAKE_CURRENT_BINARY_DIR}/utilities/version.cpp)
target_include_directories(MonteCarlo-BSE_version PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

set(mcbse_source_files ../src/constants/element.cpp ../src/constants/element.h)
set(mcbse_source_files ${mcbse_source_files} ../src/inputs/Input.cpp ../src/inputs/Input.h)
set(mcbse_source_files ${mcbse_source_files} ../src/inputs/Element.cpp ../src/inputs/Element.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/DirectionCosine.cpp ../src/models/DirectionCosine.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/EnergyLoss.cpp ../src/models/EnergyLoss.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/MeanFreePath.cpp ../src/models/MeanFreePath.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/RandomNumber.cpp ../src/models/RandomNumber.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/RandomSeed.cpp ../src/models/RandomSeed.h)
set(mcbse_source_files ${mcbse_source_files} ../src/models/Rutherford.cpp ../src/models/Rutherford.h)
set(mcbse_source_files ${mcbse_source_files} ../src/options/program_options.cpp ../src/options/program_options.h)
set(mcbse_source_files ${mcbse_source_files} ../src/options/program_options_parser.cpp ../src/options/program_options_parser.h)
set(mcbse_source_files ${mcbse_source_files} ../src/results/Counter.cpp ../src/results/Counter.h)
set(mcbse_source_files ${mcbse_source_files} ../src/results/Statistic.cpp ../src/results/Statistic.h)
set(mcbse_source_files ${mcbse_source_files} ../src/simulation/Simulation.cpp ../src/simulation/Simulation.h)
set(mcbse_source_files ${mcbse_source_files} ../src/utilities/logger.cpp ../src/utilities/logger.h)
set(mcbse_source_files ${mcbse_source_files} ../src/utilities/ProgramVersion.cpp ../src/utilities/ProgramVersion.h)
set(mcbse_source_files ${mcbse_source_files} ../src/utilities/Timer.cpp ../src/utilities/Timer.h)
set(mcbse_source_files ${mcbse_source_files} ../src/utilities/version.h)
set(mcbse_source_files ${mcbse_source_files} ../src/utilities/VersionInfo.cpp ../src/utilities/VersionInfo.h)
set(mcbse_source_files ${mcbse_source_files} ../src/runner/Data.cpp ../src/runner/Data.h)
set(mcbse_source_files ${mcbse_source_files} ../src/runner/inputs.cpp ../src/runner/inputs.h)
set(mcbse_source_files ${mcbse_source_files} ../src/runner/simulate.cpp ../src/runner/simulate.h)
set(mcbse_source_files ${mcbse_source_files} PARENT_SCOPE)

list(LENGTH mcbse_source_files len)
message("MCBSE source files length = ${len}")

add_executable(mcbse_console mcbse_console.cpp ${mcbse_source_files})
target_include_directories(mcbse_console PRIVATE ../src CONAN_PKG::spdlog CONAN_PKG::cli11)

target_link_libraries(mcbse_console PRIVATE project_options project_warnings Threads::Threads CONAN_PKG::spdlog
        CONAN_PKG::cli11
        MonteCarlo-BSE_version)

add_subdirectory(runner)

if(CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC" AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    message("")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
    #set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -DNDEBUG -mavx")
    message(${CMAKE_CXX_FLAGS_RELEASE})
endif()
